<resources>
    <string name="app_name">MadLevel5Task2</string>
    <string name="action_settings">Settings</string>
    <string name="games_fragment_label">Game Backlog</string>
    <string name="add_game_fragment_label">Add Game</string>

    <string name="btn_delete">Delete</string>

    <!-- Games Fragment -->
    <string name="game_release_date">Release: %1$s/%2$s/%3$s</string>
    <string name="success_delete">Successfully deleted game</string>
    <string name="success_delete_all">Successfully deleted backlog</string>
    <string name="undo">UNDO</string>


    <!-- Add Game Fragment -->
    <string name="game_title">Title</string>
    <string name="game_platform">Platform</string>
    <string name="date_day">Day</string>
    <string name="date_month">Month</string>
    <string name="date_year">Year</string>

    <string name="error_empty_title">Please fill in a title</string>
    <string name="error_empty_platform">Please fill in a platform</string>
    <string name="error_date">Please fill in a valid date</string>
</resources>